# SpaceJunk

./: CMakeLists.txt  README.md  keybind.yaml
.github/workflows/: c-cpp.yml
src/: action.cpp  action.h  actionmanager.cpp  actionmanager.h  appcontroller.cpp  appcontroller.h  bullet.cpp  bullet.h  common.h  drawer.cpp  drawer.h  event.cpp  event.h  eventloop.h  eventloop_impl.h  exitwidget.cpp  exitwidget.h  field.cpp  field.h  game.cpp  game.h  gameobject.cpp  gameobject.h  geomutility.h  hierarchynode.cpp  hierarchynode.h  ltexture.cpp  ltexture.h  main.cpp  merrors.cpp  merrors.h  sceneevent.cpp  sceneevent.h  sdl_event_comparator.h  ship.cpp  ship.h  subscriber.h  treenode.cpp  treenode.h  turret.h  (+6 more)
src/events/: inputevent.cpp  inputevent.h  keyboarddata.cpp  keyboarddata.h  mousebuttondata.cpp  mousebuttondata.h  mousemotiondata.cpp  mousemotiondata.h  sdlevents_to_inputevents_converter.cpp  systemevents_to_inputevents_converter.cpp
